syntax = "proto3";

package raftcomm;

option go_package="internal/proto;raftcomm";

message RequestVoteRequest{
  // Candidate’s current term.
  uint32 Term = 1;

  // Candidate’s ID requesting vote.
  string CandidateId = 2;

  // Index of candidate’s last log entry.
  uint32 LastLogIndex = 3;

  // Term of candidate’s last log entry.
  uint32 LastLogTerm = 4;
}

message RequestVoteResponse{
  // Follower’s current term (so candidate can update itself if needed).
  uint32 Term = 1;

  // True means follower received and granted its vote to the candidate.
  bool VoteGranted = 2;
}
